Перебрал courses.html. Нужно подставить данные из бд в цены

--- a/LearningSite/main/templates/main/courses.html
+++ b/LearningSite/main/templates/main/courses.html
@@ -22,10 +22,10 @@
                                     <img src="img/program/1.png" alt="">
                                 </div>
                                 <div class="program__content">
-                                    <span>Agriculture</span>
-                                    <h4>Chemical engneering</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                                    <a href="#" class="boxed-btn5">Apply NOw</a>
+                                    <span>Python</span>
+                                    <h4>Python backend developer</h4>
+                                    <p>Get start in IT, in most popular way.</p>
+                                    <a href="#" class="boxed-btn5">PLACE FOR DATA!!!</a>
                                 </div>
                             </div>
                         </div>
@@ -35,10 +35,10 @@
                                     <img src="img/program/2.png" alt="">
                                 </div>
                                 <div class="program__content">
-                                    <span>Agriculture</span>
-                                    <h4>Mechanical engneering</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                                    <a href="#" class="boxed-btn5">Apply NOw</a>
+                                    <span>Java</span>
+                                    <h4>Java developer</h4>
+                                    <p>Get start in IT, in most popular way.</p>
+                                    <a href="#" class="boxed-btn5">PLACE FOR DATA!!!</a>
                                 </div>
                             </div>
                         </div>
@@ -48,10 +48,10 @@
                                     <img src="img/program/3.png" alt="">
                                 </div>
                                 <div class="program__content">
-                                    <span>Agriculture</span>
-                                    <h4>Bio engneering</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                                    <a href="#" class="boxed-btn5">Apply NOw</a>
+                                    <span>Front-End</span>
+                                    <h4>HTML, CSS front-end developer</h4>
+                                    <p>Get start in IT, in most popular way.</p>
+                                    <a href="#" class="boxed-btn5">PLACE FOR DATA!!!</a>
                                 </div>
                             </div>
                         </div>
