Поковырялся в index.html

--- a/LearningSite/main/templates/main/index.html
+++ b/LearningSite/main/templates/main/index.html
@@ -13,8 +13,7 @@
                                 <h3>Boost up your skills <br>
                                     with a new way of <br>
                                     learning.</h3>
-                                <a href="#" class="boxed-btn3">Get Start</a>
-                                <a href="#" class="boxed-btn4">Take a tour</a>
+                                <a href="{% url 'main:courses' %}"class="boxed-btn3">Get Start</a>
                             </div>
                         </div>
                     </div>
