Revert "Поковырялся в index.html"
This reverts commit 50d50ac20e12f21f570238848a455505c388d7e1.

--- a/LearningSite/main/templates/main/index.html
+++ b/LearningSite/main/templates/main/index.html
@@ -13,7 +13,8 @@
                                 <h3>Boost up your skills <br>
                                     with a new way of <br>
                                     learning.</h3>
-                                <a href="{% url 'main:courses' %}"class="boxed-btn3">Get Start</a>
+                                <a href="#" class="boxed-btn3">Get Start</a>
+                                <a href="#" class="boxed-btn4">Take a tour</a>
                             </div>
                         </div>
                     </div>
