--- a/LearningSite/main/templates/main/base.html
+++ b/LearningSite/main/templates/main/base.html
@@ -3,130 +3,132 @@
 <html class="js" lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Education</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="" name="description">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Education</title>
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href= "{% static 'main/img/favicon.png' %}">
+    <link href="{% static 'main/img/favicon.png' %}" rel="shortcut icon" type="image/x-icon">
     <!-- Place favicon.ico in the root directory -->
-        <!-- CSS here -->
-    <link rel="stylesheet" href="{% static 'main/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/magnific-popup.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/themify-icons.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/nice-select.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/gijgo.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/slicknav.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
+    <!-- CSS here -->
+    <link href="{% static 'main/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/owl.carousel.min.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/magnific-popup.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/themify-icons.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/nice-select.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/flaticon.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/gijgo.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/animate.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/slicknav.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/style.css' %}" rel="stylesheet">
     {% block css %}
     {% endblock css %}
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 <body>
-    <!-- header-start -->
-    <header>
-        <div class="header-area ">
-            <div class="header-top_area">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="header_top_wrap d-flex justify-content-between align-items-center">
-                                <div class="text_wrap">
-                                    <p><a href="#"> <i class="ti-user"></i>  Login</a> <a href="#">Register</a>
-                                </div>
+<!-- header-start -->
+<header>
+    <div class="header-area ">
+        <div class="header-top_area">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="header_top_wrap d-flex justify-content-between align-items-center">
+                            <div class="text_wrap">
+                                <p><a href="#"> <i class="ti-user"></i> Login</a> <a href="#">Register</a>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="sticky-header" class="main-header-area">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="header_wrap d-flex justify-content-between align-items-center">
-                                <div class="header_left">
-                                    <div class="logo">
-                                        <a href="index.html">
-                                            <img src='{% static "main/img/logo.png" %}' alt="">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="header_right d-flex align-items-center">
-                                    <div class="main-menu  d-none d-lg-block">
-                                        <nav>
-                                            <ul id="navigation">
-                                                <li><a href="{% url 'main:homepage' %}">home</a></li>
-                                                <li><a href="{% url 'main:courses' %}">Courses</a></li>
-                                                <li><a href="#">My Courses </a></li>
-                                                <li><a href="#">Basket </a></li>
-                                            </ul>
-                                        </nav>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+        <div class="main-header-area" id="sticky-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="header_wrap d-flex justify-content-between align-items-center">
+                            <div class="header_left">
+                                <div class="logo">
+                                    <a href="index.html">
+                                        <img alt="" src='{% static "main/img/logo.png" %}'>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="header_right d-flex align-items-center">
+                                <div class="main-menu  d-none d-lg-block">
+                                    <nav>
+                                        <ul id="navigation">
+                                            <li><a href="{% url 'main:homepage' %}">home</a></li>
+                                            <li><a href="{% url 'main:courses' %}">Courses</a></li>
+                                            <li><a href="#">My Courses </a></li>
+                                            <li><a href="#">Basket </a></li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="mobile_menu d-block d-lg-none"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 {% block content %}
 
 {% endblock %}
-        <!-- footer end  -->
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                    </div>
-                </div>
+<!-- footer end  -->
+<div class="copy-right_text">
+    <div class="container">
+        <div class="footer_border"></div>
+        <div class="row">
+            <div class="col-xl-12">
+                <p class="copy_right text-center">
+                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                    All rights reserved | This template is made with <i aria-hidden="true" class="ti-heart"></i> by <a
+                            href="https://colorlib.com" target="_blank">Colorlib</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
         </div>
+    </div>
+</div>
 
 
-    <!-- JS here -->
-    <script src='{% static "main/js/vendor/modernizr-3.5.0.min.js" %}'></script>
-    <script src='{% static "main/js/vendor/jquery-1.12.4.min.js" %}'></script>
-    <script src='{% static "main/js/popper.min.js" %}'></script>
-    <script src='{% static "main/js/bootstrap.min.js" %}'></script>
-    <script src='{% static "main/js/owl.carousel.min.js" %}'></script>
-    <script src='{% static "main/js/isotope.pkgd.min.js" %}'></script>
-    <script src='{% static "main/js/ajax-form.js" %}'></script>
-    <script src='{% static "main/js/waypoints.min.js" %}'></script>
-    <script src='{% static "main/js/jquery.counterup.min.js" %}'></script>
-    <script src='{% static "main/js/imagesloaded.pkgd.min.js" %}'></script>
-    <script src='{% static "main/js/scrollIt.js" %}'></script>
-    <script src='{% static "main/js/jquery.scrollUp.min.js" %}'></script>
-    <script src='{% static "main/js/wow.min.js" %}'></script>
-    <script src='{% static "main/js/nice-select.min.js" %}'></script>
-    <script src='{% static "main/js/jquery.slicknav.min.js" %}'></script>
-    <script src='{% static "main/js/jquery.magnific-popup.min.js" %}'></script>
-    <script src='{% static "main/js/plugins.js" %}'></script>
-    <script src='{% static "main/js/gijgo.min.js" %}'></script>
+<!-- JS here -->
+<script src='{% static "main/js/vendor/modernizr-3.5.0.min.js" %}'></script>
+<script src='{% static "main/js/vendor/jquery-1.12.4.min.js" %}'></script>
+<script src='{% static "main/js/popper.min.js" %}'></script>
+<script src='{% static "main/js/bootstrap.min.js" %}'></script>
+<script src='{% static "main/js/owl.carousel.min.js" %}'></script>
+<script src='{% static "main/js/isotope.pkgd.min.js" %}'></script>
+<script src='{% static "main/js/ajax-form.js" %}'></script>
+<script src='{% static "main/js/waypoints.min.js" %}'></script>
+<script src='{% static "main/js/jquery.counterup.min.js" %}'></script>
+<script src='{% static "main/js/imagesloaded.pkgd.min.js" %}'></script>
+<script src='{% static "main/js/scrollIt.js" %}'></script>
+<script src='{% static "main/js/jquery.scrollUp.min.js" %}'></script>
+<script src='{% static "main/js/wow.min.js" %}'></script>
+<script src='{% static "main/js/nice-select.min.js" %}'></script>
+<script src='{% static "main/js/jquery.slicknav.min.js" %}'></script>
+<script src='{% static "main/js/jquery.magnific-popup.min.js" %}'></script>
+<script src='{% static "main/js/plugins.js" %}'></script>
+<script src='{% static "main/js/gijgo.min.js" %}'></script>
 
-    <!--contact js-->
-    <script src='{% static "main/js/contact.js" %}'></script>
-    <script src='{% static "main/js/jquery.ajaxchimp.min.js" %}'></script>
-    <script src='{% static "main/js/jquery.form.js" %}'></script>
-    <script src='{% static "main/js/jquery.validate.min.js" %}'></script>
-    <script src='{% static "main/js/mail-script.js" %}'></script>
+<!--contact js-->
+<script src='{% static "main/js/contact.js" %}'></script>
+<script src='{% static "main/js/jquery.ajaxchimp.min.js" %}'></script>
+<script src='{% static "main/js/jquery.form.js" %}'></script>
+<script src='{% static "main/js/jquery.validate.min.js" %}'></script>
+<script src='{% static "main/js/mail-script.js" %}'></script>
 
-    <script src='{% static "main/js/main.js" %}'></script>
-    {% block js %}
+<script src='{% static "main/js/main.js" %}'></script>
+{% block js %}
 
-    {% endblock js %}
+{% endblock js %}
 </body>
 </html>
