--- a/LearningSite/main/templates/main/courses.html
+++ b/LearningSite/main/templates/main/courses.html
@@ -1,63 +1,63 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-    <!-- bradcam_area_end  -->
+<!-- bradcam_area_end  -->
 
-    <!-- popular_program_area_start  -->
-    <div class="popular_program_area section__padding program__page">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section_title text-center">
-                        <h3>Popular Program</h3>
-                    </div>
+<!-- popular_program_area_start  -->
+<div class="popular_program_area section__padding program__page">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section_title text-center">
+                    <h3>Popular Program</h3>
                 </div>
             </div>
-            <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6">
-                            <div class="single__program">
-                                <div class="program_thumb">
-                                    <img src="img/program/1.png" alt="">
-                                </div>
-                                <div class="program__content">
-                                    <span>Python</span>
-                                    <h4>Python backend developer</h4>
-                                    <p>Get start in IT, in most popular way.</p>
-                                    <a href="#" class="boxed-btn5">PLACE FOR DATA!!!</a>
-                                </div>
+        </div>
+        <div class="tab-content" id="nav-tabContent">
+            <div aria-labelledby="nav-home-tab" class="tab-pane fade show active" id="nav-home" role="tabpanel">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="single__program">
+                            <div class="program_thumb">
+                                <img alt="" src="img/program/1.png">
+                            </div>
+                            <div class="program__content">
+                                <span>Python</span>
+                                <h4>Python backend developer</h4>
+                                <p>Get start in IT, in most popular way.</p>
+                                <a class="boxed-btn5" href="#">PLACE FOR DATA!!!</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="single__program">
-                                <div class="program_thumb">
-                                    <img src="img/program/2.png" alt="">
-                                </div>
-                                <div class="program__content">
-                                    <span>Java</span>
-                                    <h4>Java developer</h4>
-                                    <p>Get start in IT, in most popular way.</p>
-                                    <a href="#" class="boxed-btn5">PLACE FOR DATA!!!</a>
-                                </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="single__program">
+                            <div class="program_thumb">
+                                <img alt="" src="img/program/2.png">
+                            </div>
+                            <div class="program__content">
+                                <span>Java</span>
+                                <h4>Java developer</h4>
+                                <p>Get start in IT, in most popular way.</p>
+                                <a class="boxed-btn5" href="#">PLACE FOR DATA!!!</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="single__program">
-                                <div class="program_thumb">
-                                    <img src="img/program/3.png" alt="">
-                                </div>
-                                <div class="program__content">
-                                    <span>Front-End</span>
-                                    <h4>HTML, CSS front-end developer</h4>
-                                    <p>Get start in IT, in most popular way.</p>
-                                    <a href="#" class="boxed-btn5">PLACE FOR DATA!!!</a>
-                                </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="single__program">
+                            <div class="program_thumb">
+                                <img alt="" src="img/program/3.png">
+                            </div>
+                            <div class="program__content">
+                                <span>Front-End</span>
+                                <h4>HTML, CSS front-end developer</h4>
+                                <p>Get start in IT, in most popular way.</p>
+                                <a class="boxed-btn5" href="#">PLACE FOR DATA!!!</a>
                             </div>
                         </div>
-                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
