--- a/LearningSite/main/templates/main/index.html
+++ b/LearningSite/main/templates/main/index.html
@@ -2,58 +2,58 @@
 </head>
 <body>
 {% block content %}
-    <div class="slider_area">
-        <div class="slider_active owl-carousel">
-            <!-- single_carouse -->
-            <div class="single_slider  d-flex align-items-center slider_bg_1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text ">
-                                <h3>Boost up your skills <br>
-                                    with a new way of <br>
-                                    learning.</h3>
-                                <a href="#" class="boxed-btn3">Get Start</a>
-                                <a href="#" class="boxed-btn4">Take a tour</a>
-                            </div>
+<div class="slider_area">
+    <div class="slider_active owl-carousel">
+        <!-- single_carouse -->
+        <div class="single_slider  d-flex align-items-center slider_bg_1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="slider_text ">
+                            <h3>Boost up your skills <br>
+                                with a new way of <br>
+                                learning.</h3>
+                            <a class="boxed-btn3" href="#">Get Start</a>
+                            <a class="boxed-btn4" href="#">Take a tour</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="single_slider  d-flex align-items-center slider_bg_2">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text ">
-                                <h3>Boost up your skills <br>
-                                    with a new way of <br>
-                                    learning.</h3>
-                                <a href="#" class="boxed-btn3">Get Start</a>
-                                <a href="#" class="boxed-btn4">Take a tour</a>
-                            </div>
+        </div>
+        <div class="single_slider  d-flex align-items-center slider_bg_2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="slider_text ">
+                            <h3>Boost up your skills <br>
+                                with a new way of <br>
+                                learning.</h3>
+                            <a class="boxed-btn3" href="#">Get Start</a>
+                            <a class="boxed-btn4" href="#">Take a tour</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <!--/ single_carouse -->
-            <!-- single_carouse -->
-            <div class="single_slider  d-flex align-items-center slider_bg_1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text ">
-                                <h3>Boost up your skills <br>
-                                    with a new way of <br>
-                                    learning.</h3>
-                                <a href="#" class="boxed-btn3">Get Start</a>
-                                <a href="#" class="boxed-btn4">Take a tour</a>
-                            </div>
+        </div>
+        <!--/ single_carouse -->
+        <!-- single_carouse -->
+        <div class="single_slider  d-flex align-items-center slider_bg_1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="slider_text ">
+                            <h3>Boost up your skills <br>
+                                with a new way of <br>
+                                learning.</h3>
+                            <a class="boxed-btn3" href="#">Get Start</a>
+                            <a class="boxed-btn4" href="#">Take a tour</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
 </body>
 
