Вернул изменения в index

--- a/LearningSite/main/templates/main/index.html
+++ b/LearningSite/main/templates/main/index.html
@@ -13,8 +13,7 @@
                             <h3>Boost up your skills <br>
                                 with a new way of <br>
                                 learning.</h3>
-                            <a class="boxed-btn3" href="#">Get Start</a>
-                            <a class="boxed-btn4" href="#">Take a tour</a>
+                            <a class="boxed-btn3" href="{% url 'main:courses' %}">Get Start</a>
                         </div>
                     </div>
                 </div>
