--- a/LearningSite/main/templates/main/index.html
+++ b/LearningSite/main/templates/main/index.html
@@ -12,7 +12,7 @@
                             <h3>Boost up your skills <br>
                                 with a new way of <br>
                                 learning.</h3>
-                            <a class="boxed-btn3" href="{% url 'main:courses' %}">Get Start</a>
+                            <a class="boxed-btn3" href="{% url 'goods:courses' %}">Get Start</a>
                         </div>
                     </div>
                 </div>
