--- a/LearningSite/main/templates/main/base.html
+++ b/LearningSite/main/templates/main/base.html
@@ -54,7 +54,7 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="{% url 'main:homepage' %}">home</a></li>
-                                            <li><a href="{% url 'main:courses' %}">Courses</a></li>
+                                            <li><a href="{% url 'goods:courses' %}">Courses</a></li>
                                             <li><a href="#">My Courses </a></li>
                                             <li><a href="#">Basket </a></li>
                                         </ul>
