--- a/LearningSite/main/templates/main/base.html
+++ b/LearningSite/main/templates/main/base.html
@@ -39,7 +39,7 @@
                     <div class="col-lg-12">
                         <div class="header_top_wrap d-flex justify-content-between align-items-center">
                             <div class="text_wrap">
-                                <p><a href="#"> <i class="ti-user"></i> Login</a> <a href="#">Register</a>
+                                <p><a href="{% url 'users:login' %}"> <i class="ti-user"></i> Login</a> <a href="{% url 'users:registration' %}">Register</a>
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                                         <ul id="navigation">
                                             <li><a href="{% url 'main:homepage' %}">home</a></li>
                                             <li><a href="{% url 'goods:courses' %}">Courses</a></li>
-                                            <li><a href="#">My Courses </a></li>
+                                            <li><a href="#"> </a></li>
                                             <li><a href="#">Basket </a></li>
                                         </ul>
                                         </li>
