--- a/LearningSite/users/templates/users/registration.html
+++ b/LearningSite/users/templates/users/registration.html
@@ -8,36 +8,43 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-9 bg-white p-4 mb-5 mx-2 rounded custom-shadow">
                                     <h2 class="text-center mb-4">Регистрация</h2>
-                                    <form>
+                                    <form action="{% url 'users:registration' %}" method ="post">
+                                        {% csrf_token %}
                                         <div class="row">
                                             <div class="col-md-6 mb-3">
-                                                <label for="firstName" class="form-label">Имя*</label>
-                                                <input type="text" class="form-control" id="firstName"
-                                                    placeholder="Введите ваше имя" required>
+                                                <label for="id_firstName" class="form-label">Имя*</label>
+                                                <input type="text" class="form-control" id="id_firstName"
+                                                       name = "first_name"
+                                                        placeholder="Введите ваше имя" required>
                                             </div>
                                             <div class="col-md-6 mb-3">
-                                                <label for="lastName" class="form-label">Фамилия*</label>
-                                                <input type="text" class="form-control" id="lastName"
+                                                <label for="id_lastName" class="form-label">Фамилия*</label>
+                                                <input type="text" class="form-control" id="id_lastName"
+                                                       name = "last_name"
                                                     placeholder="Введите вашу фамилию" required>
                                             </div>
                                             <div class="col-md-6 mb-3">
-                                                <label for="username" class="form-label">Имя пользователя*</label>
-                                                <input type="text" class="form-control" id="username"
+                                                <label for="id_username" class="form-label">Имя пользователя*</label>
+                                                <input type="text" class="form-control" id="id_username"
+                                                       name = "username"
                                                     placeholder="Введите ваше имя пользователя" required>
                                             </div>
                                             <div class="col-md-6 mb-3">
-                                                <label for="email" class="form-label">Email*</label>
-                                                <input type="email" class="form-control" id="email"
+                                                <label for="id_email" class="form-label">Email*</label>
+                                                <input type="email" class="form-control" id="id_email"
+                                                       name = "email"
                                                     placeholder="Введите ваш email" required>
                                             </div>
                                             <div class="col-md-6 mb-3">
-                                                <label for="password1" class="form-label">Пароль*</label>
-                                                <input type="password" class="form-control" id="password1"
+                                                <label for="id_password1" class="form-label">Пароль*</label>
+                                                <input type="password" class="form-control" id="id_password1"
+                                                    name = "password1"
                                                     placeholder="Введите пароль" required>
                                             </div>
                                             <div class="col-md-6 mb-3">
-                                                <label for="password2" class="form-label">Подтверждение пароля*</label>
-                                                <input type="password" class="form-control" id="password2"
+                                                <label for="id_password2" class="form-label">Подтверждение пароля*</label>
+                                                <input type="password" class="form-control" id="id_password2"
+                                                       name = "password2"
                                                     placeholder="Подтвердите пароль" required>
                                             </div>
                                         </div>
